Fixed an overflow issue on the top image

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,16 @@ main {
    background-color: #F5F5F5;
 }
 
+.top-image {
+   position: relative;
+   width: 100%;
+   overflow: hidden;
+}
+
+.top-image img {
+   object-fit: contain;
+}
+
 .tablet-desktop {
    display: none;
 }
